[gd_scene load_steps=5 format=3 uid="uid://bg7dqpj5bjc6x"]

[ext_resource type="PhysicsMaterial" uid="uid://fdnyxkdqbh7y" path="res://models/player/ship.tres" id="1_3lbs4"]
[ext_resource type="Script" uid="uid://cfnro34pgi2as" path="res://models/player/ship.gd" id="1_yja86"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3lbs4"]
radius = 21.3776

[sub_resource type="Curve" id="Curve_3lbs4"]
_data = [Vector2(0.0170455, 0), 0.0, 0.0, 0, 0, Vector2(0.539773, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Ship" type="RigidBody2D"]
collision_priority = 2.0
mass = 10.0
physics_material_override = ExtResource("1_3lbs4")
gravity_scale = 0.0
continuous_cd = 2
script = ExtResource("1_yja86")

[node name="TriangleLight" type="Polygon2D" parent="."]
position = Vector2(12, -2)
rotation = 3.14159
color = Color(1, 0, 0.894118, 1)
polygon = PackedVector2Array(-5, -19, 33, -10, 29, -2, 9, -2)

[node name="TriangleDark" type="Polygon2D" parent="."]
position = Vector2(12, -2)
rotation = 3.14159
color = Color(0.733333, 0, 0.654902, 1)
polygon = PackedVector2Array(9, -2, 29, -2, 33, 6, -5, 15)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 3.14159
polygon = PackedVector2Array(-17, -17, 21, -8, 17, 0, 21, 8, -17, 17, -3, 0)

[node name="HeatedEffect" type="Node2D" parent="."]
rotation = 3.14159

[node name="HeatedShape" type="Polygon2D" parent="HeatedEffect"]
position = Vector2(-12, 2)
polygon = PackedVector2Array(-5, -19, 33, -10, 29, -2.11238, 33, 6, -5, 15, 9, -2)

[node name="ForcefieldArea" type="Area2D" parent="."]
position = Vector2(21, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ForcefieldArea"]
shape = SubResource("CircleShape2D_3lbs4")

[node name="ForcefieldEffect" type="CPUParticles2D" parent="."]
position = Vector2(54, 0)
amount = 20
emission_shape = 1
emission_sphere_radius = 35.0
particle_flag_align_y = true
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
angular_velocity_min = -538.19
angular_velocity_max = -538.19
orbit_velocity_min = 0.05
orbit_velocity_max = 0.1
radial_accel_min = -66.66
radial_accel_max = -66.66
damping_min = 25.0
damping_max = 50.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_3lbs4")
